<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"

    tools:context="br.com.transferr.activities.FrmPlainTourActivity">

    <!-- including the toolbar -->
    <include layout="@layout/toolbar"/>
    <ProgressBar
        style="?android:attr/progressBarStyleLarge"
        android:id="@+id/progressBar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp"
        android:background="@color/black"
        android:visibility="gone"/>
    <TextView
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:text="@string/tvLocation"
        android:paddingRight="10dp"
        android:paddingLeft="10dp"
        android:textColor="@color/primary_dark"
        android:textStyle="bold"/>

    <Spinner
        android:id="@+id/spLocation"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:padding="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:gravity="center"
        style="@style/spinner_style"
        />
    <TextView
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:text="@string/tvSeats"
        android:paddingRight="10dp"
        android:paddingLeft="10dp"
        android:textColor="@color/primary_dark"
        android:textStyle="bold"/>

    <Spinner
        android:id="@+id/spSeats"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:padding="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        style="@style/spinner_style"

        />

    <LinearLayout
        android:layout_width="259dp"
        android:layout_height="50dp"
        android:layout_marginTop="50dp"
        android:orientation="horizontal"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">

        <TextView

            android:layout_width="161dp"
            android:layout_height="wrap_content"
            android:text="@string/tvEmptySeats"
            android:textSize="@dimen/form_text_size"
            android:textColor="@color/violet"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/lblRemindingSeats"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="45dp"
            android:text="0"
            android:textSize="@dimen/form_text_size"
            android:textColor="@color/violet"
            android:textStyle="bold"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:paddingRight="10dp"
        android:paddingLeft="10dp">
        <TextView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/form_text_size"
            android:text="@string/tvCarCapacite"
            android:textColor="@color/violet"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/lblCarCapacity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/form_text_size"
            android:paddingLeft="40dp"
            android:layout_marginRight="20dp"
            android:text="0"
            android:textColor="@color/violet"
            android:textStyle="bold"/>
    </LinearLayout>
    <Button
        android:id="@+id/btnSave"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:text="@string/btnSave"
        android:textColor="@color/white"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:background="@drawable/button_shape"
        />

</LinearLayout>
