<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:orientation="vertical"
    tools:context="br.com.transferr.activities.LoginActivity"
    >

    <TextView
        android:layout_width="90dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:textSize="30dp"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:textColor="@color/primary_dark"
        android:text="Login"/>

    <ProgressBar
        style="?android:attr/progressBarStyleLarge"
        android:id="@+id/progressBar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="0dp"
        android:background="@color/black"
        android:visibility="gone"/>



    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/text_padding_left"
        android:text="@string/user"/>
    <EditText
        android:id="@+id/txtLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:paddingLeft="@dimen/text_padding_left"
        android:singleLine="true"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:paddingLeft="@dimen/text_padding_left"
        android:text="@string/password"/>
    <EditText
        android:id="@+id/txtPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:paddingLeft="@dimen/text_padding_left"
        android:inputType="textPassword"/>

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/btnLogin"
        android:layout_marginTop="40dp"
        android:textColor="#ffffff"
        android:background="@color/primary_dark"/>

    <Button
        android:id="@+id/btnRecoverPass"
        android:layout_marginTop="25dp"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        style="?android:attr/borderlessButtonStyle"
        android:textColor="@color/blue"
        android:layout_gravity="center"
        android:shadowRadius="6"
        android:text="Esqueceu a senha?" />

</LinearLayout>
